@@ -27,16 +27,21 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>19</source>
-					<target>19</target>
+					<release>19</release>
 					<encoding>UTF-8</encoding>
 					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 
+			<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<release>19</release>
+					<encoding>UTF-8</encoding>
+					<additionalOptions>(here are two minuses)--><!--enable-preview</additionalOptions>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -46,6 +51,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			-->
 		</plugins>
 	</build>
 
